<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/img_btn_garbage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/btn_homeasup_default" />

        <TextView
            android:id="@+id/garbage_SM"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingRight="16dp"
            android:text="@string/layout_gerbage_top_txt"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue" >

        <TextView
            android:id="@+id/garbage_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/garbage_txt2"
            android:layout_alignBottom="@+id/garbage_txt2"
            android:layout_alignParentRight="true"
            android:layout_marginRight="126dp"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/garbage_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/garbage_txt"
            android:text="@string/found"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/garbage_lsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" >
    </ExpandableListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/main_5dp" >

        <CheckBox
            android:id="@+id/garbage_chb_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/garbage_btn_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/layout_gerbage_btn_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/main_20sp" />
    </LinearLayout>

</LinearLayout>